--- a/gb/24/6/27/n14278861.md
+++ b/gb/24/6/27/n14278861.md
@@ -10,19 +10,82 @@
 <p>这将是历史上最早的一次选举年总统辩论，两位候选人都有机会撼动竞选格局。</p>
 <p>周四的总统辩论与过去64年来的电视辩论都不同。从主持人到时间安排，在很多方面都打破了常规。CNN将主持这次电视辩论。</p>
 <h2>要点：</h2>
-<p><strong><ahref="#_Toc2024062701">盘点今晚的关键辩论规则</a></strong><br />
+<p><strong><ahref="#_Toc2024062701">今晚辩论关键规则</a></strong><br />
 <strong><ahref="#_Toc2024062701">辩论会后的民调是风向标</a></strong></p>
 </p>
 <p><center><a title="（中文同声翻译）2024年美国总统大选首场辩论——CNN总统辩论，将在美东时间周四（6月27日）晚9:00登场" src="https://www.ganjingworld.com/zh-TW/embed/1grqkja24314nd3aaZrr6TMez14q1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<p>晚8:30，拜登的总统车队离开下榻的酒店，开始驶向辩论地点。支持者高喊，“一起走吧，乔”，“再干四年”。</p>
 <p><a name="_Toc2024062701"></a></p>
-<h2>盘点今晚的关键辩论规则</h2>
+<h2>上半场辩论结束 川普在累计发言上领先</h2>
+<p>在第一次休息后，川普的累计发言时间约为23分6秒，而拜登的时间约为18分26秒。</p>
+<p>虽然两位候选人都有平等的机会回答问题，但他们可选择不用完被分配的时间。这导致两人的发言时间有所差异。</p>
+<h2>川普将美国暴力犯罪归咎于拜登移民政策</h2>
+<p>川普表示，由于国内犯罪率上升，美国人“现在正生活在一个老鼠窝里”，他认为这与更多移民进入美国有关。</p>
+<p>他说：“他们正在纽约、加利福尼亚和联邦各州杀害我们的人民，因为我们的边界已经没有边界了。”</p>
+<p>川普将这一问题归咎于拜登的移民政策。</p>
+<p>这位前总统说：“他们正在以前所未有的程度杀害我们的公民。”</p>
+<p>他提到了12岁的农加雷（Jocelyn Nungaray）之死，她本月初被发现死在一条小溪里。据休斯顿警察局表示，两名来自委内瑞拉的非法移民被指控杀害了这名女孩，两人都因她的死而面临死刑谋杀指控。</p>
+<p>川普表示，他最近会见了农加雷的家人。</p>
+<h2>拜登在北约问题上攻击川普</h2>
+<p>拜登回击了川普关于乌克兰的提议，指责他想让美国退出北约并在欧洲引发更广泛的战争。</p>
+<p>关于北约，拜登反驳川普说：“我从来没有听过这么多愚蠢的话。这是一个想要退出北约的人。”</p>
+<p>“事实上，如果普京继续进入北约，会发生什么？我们有五条协议，攻击其中一个成员国，就是攻击所有人。你想发动核战争吗？他一直在说，那你就让普京进去控制乌克兰，然后再转向波兰和其他地方。那会发生什么呢？”拜登补充说</p>
+<h2>拜登在演讲中显得有些吃力</h2>
+<p>在总统辩论中，拜登在开场时多次清嗓子或咳嗽，似乎出现表达困难的情况。</p>
+<p>此前，拜登的医生表示，这种情况是由胃酸逆流引起的。</p>
+<p>拜登的医生奥康纳（Kevin O&#8217;Connor）博士在拜登二月份体检后的一份备忘录中说，拜登“偶尔会出现胃食道逆流症状，主要是需要经常清嗓子”。</p>
+<p>拜登也曾有口吃的问题，他曾公开承认口吃对他影响深远。</p>
+<p>拜登2020年曾说，他“偶尔还是会在非常疲惫的时候”发现自己口吃，他强调这与智商无关。</p>
+<h2>如何实现加沙停火 释放剩余以色列人质</h2>
+<p>当主持人提问拜登，美国将使用什么额外手段，让哈马斯释放剩余的以色列人质并实现停火。</p>
+<p>拜登表示，他的政府“仍在努力推动”让哈马斯接受停火协议，并表示他拒绝向以色列提供的唯一弹药是2,000磅炸弹，这种炸弹“在人口稠密地区效果不佳”。</p>
+<p>川普回到乌克兰和北约的话题，并表示，当他上任时，北约正在“破产”，是他开始敦促这些国家增加国防开支。</p>
+<h2>川普和拜登互相指责通胀</h2>
+<p>拜登表示，他从前总统川普那里继承的经济，是他担任总统期间通胀飙升的部分原因。</p>
+<p>川普随后表示，拜登继承的是“几乎没有通货膨胀”的美国经济。</p>
+<p>拜登2021年上任时，美国的通胀率仅略高于1%。到2022年6月，通胀率飙升至9%，为40多年来的最高通胀率。目前，美国的通货膨胀率为3.2%。</p>
+<h2>川普表示 他将在上任前解决俄乌战争</h2>
+<p>川普表示，假设他在11月的美国大选中获胜，他可以在上任前以某种方式解决俄罗斯入侵乌克兰的问题。</p>
+<p>“作为当选总统，我将在1月20日就职前解决普京和泽连斯基之间的战争”，川普说，“我将在1月20日就职前，解决普京和泽连斯基之间的战争，解决人们被无谓、愚蠢地杀害的问题，我将在就职前尽快解决它。”</p>
+<p>此前，民主党人一直批评，川普可能接受普京的停战条件。在周四晚间的发言中，川普在回应主持人的提问时表示，普京为结束俄乌战争而提出的条件是“不可接受的”。</p>
+<h2>拜登和川普在移民问题上发生冲突</h2>
+<p>两位候选人在移民问题上发生激辩。川普指责拜登开放边境政策，允许“恐怖分子”进入美国。拜登则回答说：“他再一次夸大其词，他在撒谎。”</p>
+<p>在竞选过程中，拜登放松边境政策导致的非法移民激增，一直是共和党政治人物们批评的焦点。拜登在谈到他的移民政策变化时说：“我已改变了这一点，现在??非法越境的人数减少了40%。”</p>
+<h2>候选人被问及生殖权问题</h2>
+<p>川普任命了三位保守派大法官进入最高法院，这是他作为总统最重要的行动之一。随之而来的右翼多数推翻了“罗诉韦德案”。</p>
+<p>拜登已将法院的裁决，以及川普说过要进一步限制生殖权，作为其竞选连任的核心内容。</p>
+<p>对此，川普表示，如果他当选总统，将不会阻止堕胎药的使用。</p>
+<p>他还表示，他同意最高法院最近关于堕胎药的裁决。</p>
+<p>本月早先，最高法院驳回了一项质疑食品和药物管理局（FDA）监管堕胎药米非司酮（Mifepristone）方法的诉讼，并做出裁决，继续允许在没有医生亲自就诊的情况下，将药物邮寄给患者。</p>
+<p>他说：“我把三位伟大的最高法院大法官送进了法院，而他们恰好投票支持废除罗诉韦德案，并将其移回各州。”“现在各州正在解决这个问题。”</p>
+<p>拜登表示，将堕胎问题交由各州自行决定“是一件可怕的事”。</p>
+<h2>对进口产品加征关税</h2>
+<p>随后，塔珀向川普询问了他对进口产品征收10%关税的提议，以及他如何防止这一提议推高通货膨胀。</p>
+<p>川普回答说：“这不会让物价走得更高，只会让那些多年来一直在欺骗我们的国家，比如中国和其他许多国家，公平地对待（我们）。这只会迫使他们付给我们很多钱，大幅减少我们的赤字，并给予我们很多做其他事情的权力。”</p>
+<p>拜登批评川普的税收政策，称该政策为富人减税，并剥夺了政府可用于改善安全网的收入。</p>
+<p>川普在反驳中立即抓住这一点，辩称，拜登放松边境，涌入的无证移民将使社会保障和红蓝卡（Medicare）破产。</p>
+<h2>候选人正在讨论经济问题</h2>
+<p>主持人杰克<span class="s1">·</span>塔珀（<span class="s1">Jake Tapper</span>）的第一个问题是关于经济，这是美国选民最关心的问题之一，特别是拜登任期内困扰美国的通胀问题。</p>
+<p>拜登总统一直在告诉选民，经济正在蓬勃发展，几乎没有比现在更好的时候了。但在前总统川普看来，“经济正在崩溃”，正如他最近在威斯康星州的一次竞选集会上所说的那样，经济完全陷入混乱。</p>
+<p>“对于那些觉得自己在你的总统任期内，比在川普总统的任期内处境更糟的选民，你有什么话要说？”塔珀问道。</p>
+<p>拜登回答说，“我们必须看看我就任时，川普留给了我什么。”“我们要做的就是尝试将一切重新恢复起来，这是我们开始做的。”拜登的回答语速明显比平时更快。</p>
+<p>川普反驳说：“我们拥有我国历史上最伟大的经济。我们受到了Covid病毒的打击，当我们受到打击时，我们花了必要的钱，这样我们就不会陷入大萧条，就像1929年我们结束时所经历的那样。”</p>
+<h2>辩论正式开始 拜登和川普没有握手</h2>
+<p>总统拜登和前总统川普在辩论开始时，并没有握手。</p>
+<p>两位候选人最后一次会面是在2020年的一场辩论上，当时由于Covid-19协议，他们也没有握手。</p>
+<h2>川普的副总统人选今晚可能现身</h2>
+<p>被视为川普最有可能选为竞选伙伴的共和党人，将在辩论后代表他向媒体发表讲话。</p>
+<p>Politico引述一位知情人士的消息说，俄亥俄州参议员JD 万斯（JD Vance），北达科他州州长道格·布尔古姆（Doug Burgum），南卡罗来纳州参议员蒂姆·斯科特（Tim Scott）和佛罗里达州参议员马可·卢比奥（Marco Rubio）将在辩论后分析中为川普发声。</p>
+<p>他们都被视为川普的潜在副总统候选名单上，他们今晚的表现预计将成为他们试镜该角色的一个因素。</p>
+<h2>今晚辩论关键规则</h2>
 <p>今晚辩论的规则和结构将与过去的一些辩论有所不同。</p>
-<p>没有现场观众：与辩论传统不同的是，不会有演播室观众。拜登的顾问认为这一要求可能会剥夺川普的主要优势，并阻止支持者喧宾夺主。</p>
+<p>没有现场观众：与辩论传统不同的是，不会有演播室观众。拜登的顾问认为这一要求可能会剥夺川普的主要优势，并阻止喧闹的支持者喧宾夺主。</p>
 <p>两次广告插播：拜登和川普将获得两次广告插播续约，但在此期间他们无法与竞选工作人员沟通。</p>
-<p>麦克风可以被切断：主持人还可以将候选人的麦克风静音，以避免轮流之间的串扰和干扰，避免拜登和川普在2020年的首次辩论对决时的尴尬。</p>
+<p>麦克风可以被切断：主持人还可以将候选人的麦克风静音，以避免轮流之间的串扰和干扰，避免拜登和川普在2020年的首次辩论对决的尴尬。</p>
+<p>当拜登和川普其中一位没有轮到发言时，他的麦克风将被静音。</p>
 <p>两分钟回答，一分钟反驳：没有开场陈词；候选人将直接回答主持人的问题。拜登和川普各有两分钟的时间回答问题，一分钟的反驳时间，一分钟的时间回应反驳。</p>
-<p>没有道具，没有准备好的笔记：将为每位候选人提供一支笔、一张纸和一瓶水，禁止使用道具或预先写好的笔记。</p>
-<p>川普将最后陈词：拜登的竞选团队掷硬币获胜，他们优先决定候选人的讲台位置。拜登选择了右侧，将川普置于观众屏幕的左侧。川普的竞选团队选择了当晚最后陈词，拜登会首先发表结束语。</p>
+<p>没有道具，没有准备好的笔记：将为候选人提供一支笔、一张纸和一瓶水。禁止使用道具或预先写好的笔记。</p>
+<p>川普最后陈词：拜登的竞选团队赢得了掷硬币胜利，优先决定讲台位置。拜登选择了右侧，川普将出现在观众屏幕的左侧。川普的竞选团队选择了当晚最后陈词，让拜登首先发表结束语。</p>
 <figure id="attachment_14277711" aria-describedby="caption-attachment-14277711" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/06/id14277711-GettyImages-2158474915.jpeg"><img class="size-medium wp-image-14277711" src="https://i.epochtimes.com/assets/uploads/2024/06/id14277711-GettyImages-2158474915-450x300.jpeg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-14277711" class="wp-caption-text">2024年6月24日，在亚特兰大举行第一场总统辩论前，CNN演播室外悬挂着横幅。(Christian Monterrosa/AFP via Getty Images)</figcaption></figure>
 <h2>拜登和川普都在积极准备</h2>
 <p>通过这场辩论，拜登有机会向选民保证，81岁的他有能力带领美国应对一系列挑战。与此同时，78岁的川普有机会试图摆脱他在纽约的重罪定罪，并说服数千万观众，他适合重返椭圆形办公室。</p>
@@ -52,18 +115,17 @@
 <p>与此同时，没有资格参加辩论的独立候选人罗伯特?F?小肯尼迪（Robert F. Kennedy Jr.）正在举办自己的竞选活动。</p>
 <p>责任编辑：李缘#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277676.md#1">分析：拜登川普首场电视辩论的风险和机会</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278790.md#1">拜登与川普首场辩论 您需要关注哪些方面？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277203.md#1">【直播】美国总统大选首场辩论登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278879.md#1">专家：中共融资平台带来“定时炸弹”风险</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279002.md#1">学生跨性别禁通知家长 加州提案将送州长签字</a></li>
+<hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/3/n9802518.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/18/n10571152.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/5/n10539350.md#1" target="_blank">中国奥运泳坛明星经历的人生巨变</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276301.md#1">台湾古典诗：杉林溪绣球花</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271929.md#1">大预言家的“末世预言”（上）：指向什么出路？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277971.md#1">【马克时空】美防空导弹先给乌克兰 韩国或援乌</a></li>
@@ -77,9 +139,11 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277240.md#1">成龙代言的防毒软件卡巴斯基遭美国禁售</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277316.md#1">为角色增重15公斤 黄晓明领奖时激动手抖</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278023.md#1">章子怡疑不满新片戏份被剪？受访片段引揣测</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278607.md#1">专家推荐搭机前吃这种水果 让飞行更舒适</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272340.md#1">造成人体不舒服、生病的六种邪气（上）</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276883.md#1">咖喱饭酱汁该放左边或右边？ 日本网友投票</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277393.md#1">婚姻陷入低潮 看韩剧翻转婚姻奇迹的启示</a></li>
+<hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/27/n14278861.htm">【更新】美总统大选首场辩论今晚9点开始</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
